--- a/src/app/home/home.tpl.html
+++ b/src/app/home/home.tpl.html
@@ -1,16 +1,16 @@
 <div class="jumbotron">
-  <h1>Non-Trivial AngularJS Made Easy</h1>
+    <h1>Non-Trivial AngularJS Made <strike>Easy</strike> Slim</h1>
 
   <p class="lead">
-    Everything you need to kickstart AngularJS projects: a best-practice
-    directory structure, an intelligent build system, and the best web design
-    libraries around.
+    A slim kickstart for you next AngularJS project: a best-practice
+    directory structure, an intelligent build system, and a few essential
+    libraries to get you on your way.
   </p>
 
   <ul class="list-inline social-buttons">
     <li>
       <iframe 
-        src="http://ghbtns.com/github-btn.html?user=ngbp&amp;repo=ngbp&amp;type=watch&amp;count=true" 
+        src="http://ghbtns.com/github-btn.html?user=kennethlawrence&amp;repo=ngbp-slim-sass&amp;type=watch&amp;count=true" 
         allowtransparency="true" 
         frameborder="0" 
         scrolling="0" 
@@ -20,7 +20,7 @@
     </li>
     <li>
       <iframe 
-        src="http://ghbtns.com/github-btn.html?user=ngbp&amp;repo=ngbp&amp;type=fork&amp;count=true" 
+        src="http://ghbtns.com/github-btn.html?user=kennethlawrence&amp;repo=ngbp-slim-sass&amp;type=fork&amp;count=true" 
         allowtransparency="true" 
         frameborder="0" 
         scrolling="0" 
@@ -28,20 +28,14 @@
         height="20">
       </iframe>
     </li>
-    <li>
-       <iframe allowtransparency="true" frameborder="0" scrolling="no"
-        src="https://platform.twitter.com/widgets/tweet_button.html?url=http%3A%2F%2Fbit.ly%2FngBoilerplate&counturl=http%3A%2F%2Fngbp.github.com%2Fngbp&text=Check%20out%20%23ngbp%20-%20an%20awesome%20kickstarter%20for%20web%20projects%20%7C&hashtags=angularjs&via=joshdmiller&related=joshdmiller"
-        style="width:130px; height:20px;"></iframe>
-    </li>
-    <li plus-one></li>
   </ul> 
   
   <div class="btn-group">
-    <a href="https://github.com/ngbp/ngbp#readme" class="btn btn-large btn-default">
+    <a href="https://github.com/kennethlawrence/ngbp-slim-sass#readme" class="btn btn-large btn-default">
       <i class="fa fa-book"></i>
       Read the Docs
     </a>
-    <a href="https://github.com/ngbp/ngbp" class="btn btn-large btn-success">
+    <a href="https://github.com/kennethlawrence/ngbp-slim-sass" class="btn btn-large btn-success">
       <i class="fa fa-download"></i>
       Download
     </a>
@@ -54,7 +48,7 @@
     <div class="col-xs-12 col-sm-6 col-md-4">
       <h4><i class="fa fa-thumbs-up"></i> Good to Go!</h4>
       <p>
-        Kickstarts your project quickly, with everything you need, so you can 
+        Kickstarts your project quickly, with just what you need, so you can 
         focus on what matters: your app.
       </p>
     </div>
@@ -83,49 +77,24 @@
       </p>
     </div>
     <div class="col-xs-12 col-sm-6 col-md-4">
-      <h4><i class="fa fa-resize-small"></i> LESS CSS</h4>
+      <h4><i class="fa fa-resize-small"></i> SASS CSS</h4>
       <p>
-        The dynamic stylesheet language that extends CSS with efficiency.
-        <a href="http://lesscss.org">More &raquo;</a>
-      </p>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-md-4">
-      <h4><i class="fa fa-twitter"></i> Twitter Bootstrap</h4>
-      <p>
-        Sleek, intuitive, and powerful front-end framework for faster and easier
-        web development.
-        <a href="http://getbootstrap.com">More &raquo;</a>
+        The superpowered stylesheet language that extends CSS with ease.
+        <a href="http://sass-lang.com">More &raquo;</a>
       </p>
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-12 col-sm-6 col-md-4">
-      <h4><i class="fa fa-circle"></i> Angular UI Bootstrap</h4>
-      <p>
-        Pure AngularJS components for Bootstrap written by the 
-        <a href="https://github.com/angular-ui?tab=members">AngularUI Team</a>.
-        <a href="http://angular-ui.github.com/bootstrap">More &raquo;</a>
-      </p>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-md-4">
+   <div class="col-xs-12 col-sm-6 col-md-4">
       <h4><i class="fa fa-flag"></i> Font Awesome</h4>
       <p>
-        The iconic font designed for use with Twitter Bootstrap.
+        The iconic font originally designed for use with Twitter Bootstrap, 
+        that works great everywhere.
         <a href="http://fortawesome.github.com/Font-Awesome">
           More &raquo;
         </a>
       </p>
     </div>
-    <div class="col-xs-12 col-sm-6 col-md-4">
-      <h4><i class="fa fa-asterisk"></i> Placeholders</h4>
-      <p>
-        Client-side image and text placeholder directives written in pure 
-        AngularJS to make designing mock-ups wicked-fast.
-        <a href="http://joshdmiller.github.com/angular-placeholders">
-          More &raquo;
-        </a>
-      </p>
-    </div>
-  </div>
+ </div>
 </div>
 
